# yew-video-streaming

./: .gitignore  Cargo.toml  index.html  style.css
.cargo/: config.toml
src/: main.rs
